# ToDo

./: README.md  pyproject.toml  test-python-junior.md
app/: auth.py  main.py  schemas.py
app/database/: crud.py  db.py  models.py
tests/: test_main.py
